; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/fddi/skfp/extr_hwt.c_hwt_start.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/fddi/skfp/extr_hwt.c_hwt_start.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.s_smc = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i64, i32, i64 }

@HWT_MAX = common dso_local global i64 0, align 8
@B2_TI_INI = common dso_local global i32 0, align 4
@B2_TI_CRTL = common dso_local global i32 0, align 4
@TIM_START = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @hwt_start(%struct.s_smc* %0, i64 %1) #0 {
  %3 = alloca %struct.s_smc*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  store %struct.s_smc* %0, %struct.s_smc** %3, align 8
  store i64 %1, i64* %4, align 8
  %6 = load i64, i64* %4, align 8
  %7 = load i64, i64* @HWT_MAX, align 8
  %8 = icmp sgt i64 %6, %7
  br i1 %8, label %9, label %11

9:                                                ; preds = %2
  %10 = load i64, i64* @HWT_MAX, align 8
  store i64 %10, i64* %4, align 8
  br label %11

11:                                               ; preds = %9, %2
  %12 = load i64, i64* %4, align 8
  %13 = load %struct.s_smc*, %struct.s_smc** %3, align 8
  %14 = getelementptr inbounds %struct.s_smc, %struct.s_smc* %13, i32 0, i32 0
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 2
  store i64 %12, i64* %15, align 8
  %16 = load %struct.s_smc*, %struct.s_smc** %3, align 8
  %17 = getelementptr inbounds %struct.s_smc, %struct.s_smc* %16, i32 0, i32 0
  %18 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %17, i32 0, i32 0
  store i64 0, i64* %18, align 8
  %19 = load i64, i64* %4, align 8
  store i64 %19, i64* %5, align 8
  %20 = load i64, i64* %5, align 8
  %21 = icmp ne i64 %20, 0
  br i1 %21, label %25, label %22

22:                                               ; preds = %11
  %23 = load i64, i64* %5, align 8
  %24 = add nsw i64 %23, 1
  store i64 %24, i64* %5, align 8
  br label %25

25:                                               ; preds = %22, %11
  %26 = load i32, i32* @B2_TI_INI, align 4
  %27 = call i32 @ADDR(i32 %26)
  %28 = load i64, i64* %5, align 8
  %29 = mul nsw i64 %28, 200
  %30 = call i32 @outpd(i32 %27, i64 %29)
  %31 = load i32, i32* @B2_TI_CRTL, align 4
  %32 = call i32 @ADDR(i32 %31)
  %33 = load i32, i32* @TIM_START, align 4
  %34 = call i32 @outpw(i32 %32, i32 %33)
  %35 = load i32, i32* @TRUE, align 4
  %36 = load %struct.s_smc*, %struct.s_smc** %3, align 8
  %37 = getelementptr inbounds %struct.s_smc, %struct.s_smc* %36, i32 0, i32 0
  %38 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %37, i32 0, i32 1
  store i32 %35, i32* %38, align 8
  ret void
}

declare dso_local i32 @outpd(i32, i64) #1

declare dso_local i32 @ADDR(i32) #1

declare dso_local i32 @outpw(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
